@@ -5995,27 +5995,8 @@ loop:		for(int i = lineNo - 1; i >= 0; i--)
 		{
 			Dimension size = popup.getPreferredSize();
 
-			Rectangle screenSize = new Rectangle();
-
-			GraphicsEnvironment ge = GraphicsEnvironment
-				.getLocalGraphicsEnvironment();
-
-			GraphicsDevice[] devices = ge.getScreenDevices();
-
-			for (int j = 0; j < devices.length; j++)
-			{
-				GraphicsDevice device = devices[j];
-
-				GraphicsConfiguration[] gc =
-					device.getConfigurations();
-
-				for (int i=0; i < gc.length; i++)
-				{
-					screenSize =
-						screenSize.union(
-							gc[i].getBounds());
-				}
-			}
+			Rectangle screenSize = GraphicsEnvironment
+				.getLocalGraphicsEnvironment().getMaximumWindowBounds();
 
 			if(x + offsetX + size.width + win.getX() > screenSize.width
 				&& x + offsetX + win.getX() >= size.width)
